# fortran-format-web-demo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: deploy.yml
llvm/: llvm-wasm.diff
src/: CMakeLists.txt  hello.f90
src/bindings/: CMakeLists.txt  bindings.c
src/format_bindings/: CMakeLists.txt  bindings.cpp  bindings.hpp
src/formatting/: CMakeLists.txt  formatting.f90
src/js/: CMakeLists.txt  bindings.c  bindings.cpp
web/: .gitignore  index.html  package-lock.json  package.json  webpack.config.js
web/src/: index.js
web/src/js/: index.js  variables.js
web/src/scss/: main.scss
